# bot_exe

./: .gitignore  README.md  build-backend.ps1  push-to-github-bot_exe.ps1
backend/: .env.example  Cargo.toml
backend/src/: agent.rs  auth.rs  main.rs
deploy/: nginx-mt5-panel.example.conf
desktop_agent/: INSTALL_STEPS.txt  PAIR_FIRST_RUN.bat  README.md  build_exe.ps1  build_installer.ps1  config.dist.example.json  config.example.json  mt5_remote_agent.iss  mt5_remote_agent.py  panel_api_url.example.txt  prepare_portable_runtime.ps1
docs/: IMPLEMENTATION-phase1-agent.md  PLAN-remote-desktop-agent-and-central-panel.md  RUNBOOK.md  SETUP-COMPLETE.md
frontend/: .env.tunnel.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  apiClient.ts  index.css  useLocalSymbolTicksWebSocket.ts  usePositionsWebSocket.ts  useRemoteHistoryWebSocket.ts  useRemotePositionsWebSocket.ts  vite-env.d.ts
frontend/src/pages/: BotLivePositions.tsx  BotTrading.tsx  ExnessClones.tsx  FixedLot.tsx  Login.tsx  RemoteAgents.tsx  RemoteHistory.tsx  SlaveAccounts.tsx
python_bridge/: mt5_bridge.py  requirements.txt  terminal_login.py
windows/: README.txt  install-autostart.ps1  last-ui-tunnel-url.txt  panel-start.ps1  panel-stop.ps1  start-cloudflare-tunnel-ui.ps1  start-cloudflare-tunnel.ps1  uninstall-autostart.ps1
