[package]
name = "mt5-panel-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "ws"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "set-header"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
subtle = "2.5"
tower_governor = { version = "0.4", features = ["axum"] }
urlencoding = "2"
argon2 = "0.5"
jsonwebtoken = "9"
totp-rs = { version = "5", features = ["otpauth"] }
rand_core = { version = "0.6", features = ["std"] }
